[gd_scene load_steps=5 format=1]

[ext_resource path="res://code/ui/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/world/WorldMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/ResourceOverview.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/EventLog.tscn" type="PackedScene" id=4]

[node name="Main" type="Container"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="WorldMap" parent="." instance=ExtResource( 2 )]

[node name="ResourceOverview" parent="." instance=ExtResource( 3 )]

visibility/visible = false

[node name="switch" type="HButtonArray" parent="." groups=[ "persistent" ]]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 688.0
button/count = 2
button/min_button_size = -1.0
button/align = 1
button/0/text = "world map"
button/0/icon = null
button/1/text = "resources"
button/1/icon = null
button/selected = 0

[node name="pass_time" type="Button" parent="." groups=[ "persistent" ]]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 128.0
margin/top = 56.0
margin/right = 48.0
margin/bottom = 32.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "next month"
flat = false

[node name="EventLog" parent="." groups=[ "persistent" ] instance=ExtResource( 4 )]

[node name="show_log" type="Button" parent="." groups=[ "persistent" ]]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 200.0
margin/top = 664.0
margin/right = 972.0
margin/bottom = 32.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "Show/hide log"
flat = false

[connection signal="time_passed" from="." to="ResourceOverview" method="update_all"]

[connection signal="button_selected" from="switch" to="." method="select_tab"]

[connection signal="pressed" from="pass_time" to="." method="pass_time"]

[connection signal="toggled" from="show_log" to="." method="show_hide_log"]


